Issue #3171502 by agami4, Kingdutch: Make post remove image button icon invisible for the accessibility tree

--- a/themes/socialbase/components/03-molecules/form-elements/image-widget/image-widget.scss
+++ b/themes/socialbase/components/03-molecules/form-elements/image-widget/image-widget.scss
@@ -58,6 +58,10 @@
     }
   }
 
+  &:focus {
+    outline: none;
+  }
+
   .btn-icon {
     fill: white;
     height: 32px;
